fixed pause menu

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -143,6 +143,7 @@ Primitive=False
 Special Effects=False
 User Created=False
 Advanced=False
+Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
@@ -174,7 +175,7 @@ ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Splash_screen
+LastLevel=/Game/Levels/MainMenu
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -183,29 +184,30 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/Pause.Pause
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/AOE/Splatter/AOE_Decal
-MRUItem1=/Game/Levels/Splash_screen
-MRUItem2=/Game/Bubble_House2/BH-Variation_2/mesh/Bubble_House_Combined
-MRUItem3=/Game/Levels/Bubbleopolis
-MRUItem4=/Game/Levels/Forest
-MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem6=/Game/Logs/Log2/Log2
-MRUItem7=/Game/Rocks/Flat_Boy_Rock__low_
-MRUItem8=/Game/Levels/NewWorld
-MRUItem9=/Game/Levels/Green_Paint
-MRUItem10=/Game/WindowStructure
-MRUItem11=/Game/Levels/NewMap
-MRUItem12=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem13=/Game/Levels/MainMenu
-MRUItem14=/Game/Levels/TechDemo
-MRUItem15=/Game/Levels/RedTesting
-MRUItem16=/Game/Levels/Magenta_Test_Room
-MRUItem17=/Game/Blueprints/Pickups/SceneFinish_Actor
-MRUItem18=/Game/Materials/Mat_CloudDeck
-MRUItem19=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Inside_bridge_piece
+MRUItem0=/Game/Blueprints/UI/Widgets/Pause
+MRUItem1=/Game/Blueprints/UI/Pause
+MRUItem2=/Game/Blueprints/AOE/Splatter/AOE_Decal
+MRUItem3=/Game/Levels/Splash_screen
+MRUItem4=/Game/Bubble_House2/BH-Variation_2/mesh/Bubble_House_Combined
+MRUItem5=/Game/Levels/Bubbleopolis
+MRUItem6=/Game/Levels/Forest
+MRUItem7=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem8=/Game/Logs/Log2/Log2
+MRUItem9=/Game/Rocks/Flat_Boy_Rock__low_
+MRUItem10=/Game/Levels/NewWorld
+MRUItem11=/Game/Levels/Green_Paint
+MRUItem12=/Game/WindowStructure
+MRUItem13=/Game/Levels/NewMap
+MRUItem14=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem15=/Game/Levels/MainMenu
+MRUItem16=/Game/Levels/TechDemo
+MRUItem17=/Game/Levels/RedTesting
+MRUItem18=/Game/Levels/Magenta_Test_Room
+MRUItem19=/Game/Blueprints/Pickups/SceneFinish_Actor
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1198,10 +1200,20 @@ K2Node_Timeline.GraphNodeDetail=True
 PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
 K2Node_VariableGet.DefaultValueCategory=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object=
+Object="\"Object.Appearance.Font\" "
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
@@ -1257,6 +1269,11 @@ ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Image="\"Object.Appearance.Brush\" "
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -1334,6 +1351,7 @@ None=======
 /Game/Rocks/Flat_Boy_Rock__low_.Flat_Boy_Rock__low_=1
 /Game/Logs/Log2/Log2.Log2=1
 /Game/Bubble_House2/BH-Variation_2/mesh/Bubble_House_Combined.Bubble_House_Combined=1
+/Game/Blueprints/UI/Pause.Pause=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
