--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/AOE/Splatter
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -184,30 +184,29 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/Pause.Pause
+CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/UI/Widgets/Pause
-MRUItem1=/Game/Blueprints/UI/Pause
-MRUItem2=/Game/Blueprints/AOE/Splatter/AOE_Decal
-MRUItem3=/Game/Levels/Splash_screen
-MRUItem4=/Game/Bubble_House2/BH-Variation_2/mesh/Bubble_House_Combined
-MRUItem5=/Game/Levels/Bubbleopolis
-MRUItem6=/Game/Levels/Forest
-MRUItem7=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem8=/Game/Logs/Log2/Log2
-MRUItem9=/Game/Rocks/Flat_Boy_Rock__low_
-MRUItem10=/Game/Levels/NewWorld
-MRUItem11=/Game/Levels/Green_Paint
-MRUItem12=/Game/WindowStructure
-MRUItem13=/Game/Levels/NewMap
-MRUItem14=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem15=/Game/Levels/MainMenu
-MRUItem16=/Game/Levels/TechDemo
-MRUItem17=/Game/Levels/RedTesting
-MRUItem18=/Game/Levels/Magenta_Test_Room
-MRUItem19=/Game/Blueprints/Pickups/SceneFinish_Actor
+MRUItem0=/Game/Blueprints/SceneFinish_Actor
+MRUItem1=/Game/Blueprints/Pickups/SceneFinish_Actor
+MRUItem2=/Game/ParticleSystems/VFX_ColorShockwave_Blueprint
+MRUItem3=/Game/Blueprints/UI/Widgets/Pause
+MRUItem4=/Game/Blueprints/UI/Pause
+MRUItem5=/Game/Blueprints/AOE/Splatter/AOE_Decal
+MRUItem6=/Game/Levels/Splash_screen
+MRUItem7=/Game/Bubble_House2/BH-Variation_2/mesh/Bubble_House_Combined
+MRUItem8=/Game/Levels/Bubbleopolis
+MRUItem9=/Game/Levels/Forest
+MRUItem10=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem11=/Game/Logs/Log2/Log2
+MRUItem12=/Game/Rocks/Flat_Boy_Rock__low_
+MRUItem13=/Game/Levels/NewWorld
+MRUItem14=/Game/Levels/Green_Paint
+MRUItem15=/Game/WindowStructure
+MRUItem16=/Game/Levels/NewMap
+MRUItem17=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem18=/Game/Levels/MainMenu
+MRUItem19=/Game/Levels/TechDemo
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1210,10 +1209,18 @@ Image.Clipping=True
 Image.Navigation=True
 Image.Localization=True
 Image.Events=True
+VFX_ColorShockwave_Blueprint_C.Tick=True
+VFX_ColorShockwave_Blueprint_C.Actor=True
+VFX_ColorShockwave_Blueprint_C.Replication=True
+VFX_ColorShockwave_Blueprint_C.Rendering=True
+VFX_ColorShockwave_Blueprint_C.Collision=True
+VFX_ColorShockwave_Blueprint_C.Input=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Navigation=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object="\"Object.Appearance.Font\" "
+Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
@@ -1274,6 +1281,7 @@ Widget="\"Object.Appearance.Font\" "
 Visual="\"Object.Appearance.Font\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
+VFX_ColorShockwave_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -1352,6 +1360,8 @@ None=======
 /Game/Logs/Log2/Log2.Log2=1
 /Game/Bubble_House2/BH-Variation_2/mesh/Bubble_House_Combined.Bubble_House_Combined=1
 /Game/Blueprints/UI/Pause.Pause=1
+/Game/ParticleSystems/VFX_ColorShockwave_Blueprint.VFX_ColorShockwave_Blueprint=1
+/Game/Blueprints/SceneFinish_Actor.SceneFinish_Actor=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1415,9 +1425,9 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=624.000 Y=235.000
-ScreenPosition=X=571.500 Y=0.000
+ScreenPosition=X=4316.000 Y=818.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1360.000 Y=800.000
+WindowSize=X=561.000 Y=325.000
 None=======
 InitiallyMaximized=True
 
@@ -2845,8 +2855,8 @@ HierarchicalLODOutliner.TimeStamp=2021.02.05-04.34.15
 HierarchicalLODOutliner.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2021.02.05-04.34.10
 BlueprintGraph.LastCompileMethod=External
-SequencerWidgets.TimeStamp=2021.01.28-02.42.50
-SequencerWidgets.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2021.02.05-04.34.21
+SequencerWidgets.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2021.01.28-02.42.44
 ExternalImagePicker.LastCompileMethod=Unknown
 Voice.TimeStamp=2021.02.05-04.34.25
