--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -171,10 +171,33 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.013100
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
+SequenceBrowser.ActiveTypeFilters=
+SequenceBrowser.EnabledTypeFilters=
+SequenceBrowser.ActiveFrontendFilters=
+SequenceBrowser.EnabledFrontendFilters=
+SequenceBrowser.ThumbnailSizeScale=0.100000
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=FrameRate
+SequenceBrowser.HiddenColumns=ImportFileFramerate
+SequenceBrowser.HiddenColumns=ImportResampleFramerate
+SequenceBrowser.HiddenColumns=NumFrames
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Splash_screen
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -183,29 +206,32 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Player/Player_BP.Player_BP
+OpenAssetsAtExit=/Game/Player/PlayerCharacter.PlayerCharacter
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/AOE/Splatter/AOE_Decal
-MRUItem1=/Game/Levels/Splash_screen
-MRUItem2=/Game/Bubble_House2/BH-Variation_2/mesh/Bubble_House_Combined
-MRUItem3=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
+MRUItem2=/Game/Player/Player_BP
+MRUItem3=/Game/Player/PlayerCharacter
 MRUItem4=/Game/Levels/Forest
-MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem6=/Game/Logs/Log2/Log2
-MRUItem7=/Game/Rocks/Flat_Boy_Rock__low_
-MRUItem8=/Game/Levels/NewWorld
-MRUItem9=/Game/Levels/Green_Paint
-MRUItem10=/Game/WindowStructure
-MRUItem11=/Game/Levels/NewMap
-MRUItem12=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem13=/Game/Levels/MainMenu
-MRUItem14=/Game/Levels/TechDemo
-MRUItem15=/Game/Levels/RedTesting
-MRUItem16=/Game/Levels/Magenta_Test_Room
-MRUItem17=/Game/Blueprints/Pickups/SceneFinish_Actor
-MRUItem18=/Game/Materials/Mat_CloudDeck
-MRUItem19=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Inside_bridge_piece
+MRUItem5=/Game/Blueprints/AOE/Splatter/AOE_Decal
+MRUItem6=/Game/Levels/Splash_screen
+MRUItem7=/Game/Bubble_House2/BH-Variation_2/mesh/Bubble_House_Combined
+MRUItem8=/Game/Levels/Bubbleopolis
+MRUItem9=/Game/Logs/Log2/Log2
+MRUItem10=/Game/Rocks/Flat_Boy_Rock__low_
+MRUItem11=/Game/Levels/NewWorld
+MRUItem12=/Game/Levels/Green_Paint
+MRUItem13=/Game/WindowStructure
+MRUItem14=/Game/Levels/NewMap
+MRUItem15=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem16=/Game/Levels/MainMenu
+MRUItem17=/Game/Levels/TechDemo
+MRUItem18=/Game/Levels/RedTesting
+MRUItem19=/Game/Levels/Magenta_Test_Room
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1198,17 +1224,62 @@ K2Node_Timeline.GraphNodeDetail=True
 PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
 K2Node_VariableGet.DefaultValueCategory=True
+Player_BP_C.Default=True
+Player_BP_C.RootMotion=True
+Player_BP_C.Notifies=True
+FbxImportUI.Animation=True
+PlayerCharacter_C.Default=True
+PlayerCharacter_C.Tick=True
+PlayerCharacter_C.Character=True
+PlayerCharacter_C.Camera=True
+PlayerCharacter_C.Pawn=True
+PlayerCharacter_C.Replication=True
+PlayerCharacter_C.Rendering=True
+PlayerCharacter_C.Collision=True
+PlayerCharacter_C.Actor=True
+PlayerCharacter_C.Input=True
+AnimationGraph.Inputs=True
+AnimationGraph.GraphBlending=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimGraphNode_TransitionResult.Result=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.CustomAttributes=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
 Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-ThirdPersonCharacter_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
+ThirdPersonCharacter_C=
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Character="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
+Character=
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Pawn="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
+Pawn=
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
@@ -1257,6 +1328,9 @@ ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PreviewMeshCollection="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.SkeletalMeshes\" "
+PlayerCharacter_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -1334,6 +1408,8 @@ None=======
 /Game/Rocks/Flat_Boy_Rock__low_.Flat_Boy_Rock__low_=1
 /Game/Logs/Log2/Log2.Log2=1
 /Game/Bubble_House2/BH-Variation_2/mesh/Bubble_House_Combined.Bubble_House_Combined=1
+/Game/Player/Player_BP.Player_BP=1
+/Game/Animation/Character/Throw_MC_Anim_mixamo_com.Throw_MC_Anim_mixamo_com=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2967,9 +3043,9 @@ GooglePADEditor.TimeStamp=2021.02.05-04.40.07
 GooglePADEditor.LastCompileMethod=External
 
 [MRU]
-MRUItem0=/Game/Levels/Splash_screen
-MRUItem1=/Game/Levels/Bubbleopolis
-MRUItem2=/Game/Levels/Forest
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Levels/Splash_screen
+MRUItem2=/Game/Levels/Bubbleopolis
 MRUItem3=/Game/Levels/NewWorld
 MRUItem4=/Game/Levels/Green_Paint
 MRUItem5=/Game/Levels/NewMap
@@ -2982,7 +3058,7 @@ MRUItem11=/Game/Levels/Blue_paint
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -3174,6 +3250,7 @@ ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+MorphThresholdPosition=0.015000
 
 [FBX_Import_UI_Option_FbxAnimSequenceImportData]
 bImportMeshesInBoneHierarchy=True
@@ -3196,6 +3273,7 @@ ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+bDeleteExistingNonCurveCustomAttributes=False
 
 [FBX_Import_UI_Option_FbxTextureImportData]
 bInvertNormalMaps=False
@@ -3213,6 +3291,7 @@ ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+BaseOpacityTextureName=
 
 [LightingBuildOptions]
 QualityLevel=3
@@ -3285,6 +3364,7 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSett
 CameraComponent=CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Pickups/PinkPickup_Actor.PinkPickup_Actor;
 RecentlyPlaced=/Game/BubbleTurbine/BubbleTurbine.BubbleTurbine;
 RecentlyPlaced=/Game/BubbleTurbine/mat_BubbleTurbine.mat_BubbleTurbine;
 RecentlyPlaced=/Game/BubbleTurbine/bubbleTurbine1.bubbleTurbine1;
@@ -3304,14 +3384,6 @@ RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBo
 RecentlyPlaced=/Game/Rocks/rock2/rock2_Retop.rock2_Retop;
 RecentlyPlaced=/Game/Rocks/rock4/rock4_retopo.rock4_retopo;
 RecentlyPlaced=/Game/Rocks/rock1/rock1_retop_Uv.rock1_retop_Uv;
-RecentlyPlaced=/Game/Rocks/Rock_Buddies__low__Rockbuddy_1.Rock_Buddies__low__Rockbuddy_1;
-RecentlyPlaced=/Game/Trees/Tree1/Tree1V3.Tree1V3;
-RecentlyPlaced=/Game/FixedFence/FixedFence.FixedFence;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
-RecentlyPlaced=/Game/SmallFence/SmallFence.SmallFence;
-RecentlyPlaced=/Game/MedFence/MedFence.MedFence;
-RecentlyPlaced=/Game/Trees/Tree6/tree6.tree6;
-RecentlyPlaced=/Game/Trees/Tree5/tree5.tree5;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
@@ -3464,4 +3536,61 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+
+[FBX_Import_UI_Option_FbxImportUI]
+bOverrideFullName=True
+bCreatePhysicsAsset=True
+bAutoComputeLodDistances=True
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+MinimumLodNumber=0
+LodNumber=0
+bImportAnimations=True
+bImportMaterials=True
+bImportTextures=True
+
+[/Script/UnrealEd.AnimationBlueprintEditorOptions]
+bHideUnrelatedNodes=False
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="AnimationBlueprintEditor",Commands=)
+Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 
