--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -171,6 +171,29 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.169643
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
+SequenceBrowser.ActiveTypeFilters=
+SequenceBrowser.EnabledTypeFilters=
+SequenceBrowser.ActiveFrontendFilters=
+SequenceBrowser.EnabledFrontendFilters=
+SequenceBrowser.ThumbnailSizeScale=0.100000
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=FrameRate
+SequenceBrowser.HiddenColumns=ImportFileFramerate
+SequenceBrowser.HiddenColumns=ImportResampleFramerate
+SequenceBrowser.HiddenColumns=NumFrames
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
@@ -183,29 +206,29 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Materials/MM_White
-MRUItem2=/Game/Materials/T_Tiles_Textues/Tiles_Stone/M_Tile_Stone_3
-MRUItem3=/Game/Materials/T_Tiles_Textues/Tiles_Stone/M_Tile_Stone_2
-MRUItem4=/Game/Materials/T_Tiles_Textues/Tiles_Stone/M_Tile_Stone_1
-MRUItem5=/Game/Texture/Galaxybox_Grey
-MRUItem6=/Game/Rocks/rock2/lambert2
-MRUItem7=/Game/Bridge/materials/lambert2
-MRUItem8=/Game/Rocks/Small_rock
-MRUItem9=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem10=/Game/Blueprints/Testing/StaircaseBP
-MRUItem11=/Game/Tower_texture_final_03_Mat
-MRUItem12=/Game/Stairs/Stair_Mat_Main
-MRUItem13=/Game/Stairs/Broken_Stairs_LP_Step_05
-MRUItem14=/Game/Materials/Mat_Stairs
-MRUItem15=/Game/StarterContent/Materials/MI_Basic_Floor
-MRUItem16=/Game/Tower_floor_final_3_Mat
-MRUItem17=/Game/Levels/Bubbleopolis
-MRUItem18=/Game/Materials/Mat_CloudDeck
-MRUItem19=/Game/Texture/_Grey
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/Player/Player_BP
+MRUItem3=/Game/Player/PlayerCharacter
+MRUItem4=/Game/Materials/MM_White
+MRUItem5=/Game/Materials/T_Tiles_Textues/Tiles_Stone/M_Tile_Stone_3
+MRUItem6=/Game/Materials/T_Tiles_Textues/Tiles_Stone/M_Tile_Stone_2
+MRUItem7=/Game/Materials/T_Tiles_Textues/Tiles_Stone/M_Tile_Stone_1
+MRUItem8=/Game/Texture/Galaxybox_Grey
+MRUItem9=/Game/Rocks/rock2/lambert2
+MRUItem10=/Game/Bridge/materials/lambert2
+MRUItem11=/Game/Rocks/Small_rock
+MRUItem12=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem13=/Game/Blueprints/Testing/StaircaseBP
+MRUItem14=/Game/Tower_texture_final_03_Mat
+MRUItem15=/Game/Stairs/Stair_Mat_Main
+MRUItem16=/Game/Stairs/Broken_Stairs_LP_Step_05
+MRUItem17=/Game/Materials/Mat_Stairs
+MRUItem18=/Game/StarterContent/Materials/MI_Basic_Floor
+MRUItem19=/Game/Tower_floor_final_3_Mat
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1253,17 +1276,39 @@ MeshColorPaintingToolProperties.Brush=True
 MeshColorPaintingToolProperties.VertexPainting=True
 MeshColorPaintingToolProperties.ColorPainting=True
 MaterialExpressionCameraPositionWS.MaterialExpression=True
+Player_BP_C.Default=True
+Player_BP_C.RootMotion=True
+Player_BP_C.Notifies=True
+AnimationGraph.Inputs=True
+AnimationGraph.GraphBlending=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+PlayerCharacter_C.Default=True
+PlayerCharacter_C.Tick=True
+PlayerCharacter_C.Character=True
+PlayerCharacter_C.Camera=True
+PlayerCharacter_C.Pawn=True
+PlayerCharacter_C.Replication=True
+PlayerCharacter_C.Rendering=True
+PlayerCharacter_C.Collision=True
+PlayerCharacter_C.Actor=True
+PlayerCharacter_C.Input=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
 Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-ThirdPersonCharacter_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
+ThirdPersonCharacter_C=
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Character="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
+Character=
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Pawn="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
+Pawn=
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
@@ -1312,6 +1357,9 @@ ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
+PreviewMeshCollection="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.SkeletalMeshes\" "
+PlayerCharacter_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -1420,6 +1468,8 @@ None=======
 /Game/Materials/T_Tiles_Textues/Tiles_Stone/M_Tile_Stone_1.M_Tile_Stone_1=1
 /Game/Materials/T_Tiles_Textues/Tiles_Stone/M_Tile_Stone_2.M_Tile_Stone_2=1
 /Game/Materials/T_Tiles_Textues/Tiles_Stone/M_Tile_Stone_3.M_Tile_Stone_3=1
+/Game/Player/Player_BP.Player_BP=1
+/Game/Player/PlayerCharacter.PlayerCharacter=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3379,9 +3429,9 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 MaterialInstanceConstant=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Pickups/PinkPickup_Actor.PinkPickup_Actor;
 RecentlyPlaced=/Game/Materials/MM_White.MM_White;
 RecentlyPlaced=/Game/Materials/Mat_YellowPaintPickup_Inst.Mat_YellowPaintPickup_Inst;
-RecentlyPlaced=/Game/Blueprints/Pickups/PinkPickup_Actor.PinkPickup_Actor;
 RecentlyPlaced=/Game/Blueprints/UI/Textures/magenta.magenta;
 RecentlyPlaced=/Game/Bridge/meshes/Bridge_Edge2.Bridge_Edge2;
 RecentlyPlaced=/Game/Bridge/meshes/Bridge_Middle.Bridge_Middle;
@@ -3595,4 +3645,41 @@ LodNumber=0
 bImportAnimations=False
 bImportMaterials=True
 bImportTextures=True
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+
+[/Script/UnrealEd.AnimationBlueprintEditorOptions]
+bHideUnrelatedNodes=False
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="AnimationBlueprintEditor",Commands=)
+Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 
