Montana did the stuff, give cookie

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -155,8 +155,8 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
-ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
-ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.254952
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.745048
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000
 ContentBrowserTab1.ActiveTypeFilters=
@@ -200,7 +200,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/testYellow
+LastLevel=/Game/Levels/Bubbleopolis
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -210,28 +210,35 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/HUD1.HUD1
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Animation/Character/Right_Strafe_Anim_mixamo_com.Right_Strafe_Anim_mixamo_com
+OpenAssetsAtExit=/Game/Player/Player_BP.Player_BP
+OpenAssetsAtExit=/Game/Levels/Bubbleopolis.Bubbleopolis:PersistentLevel.Bubbleopolis
+OpenAssetsAtExit=/Game/Blueprints/Pickups/BluePaintPickup_Actor.BluePaintPickup_Actor
+OpenAssetsAtExit=/Game/Blueprints/Pickups/GreenPickup_Actor.GreenPickup_Actor
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/testYellow
-MRUItem1=/Game/Levels/Splash_screen
-MRUItem2=/Game/Levels/Forest
-MRUItem3=/Game/Blueprints/UI/HUD1_nowheel
-MRUItem4=/Game/Blueprints/UI/Widgets/HUD6
-MRUItem5=/Game/Blueprints/UI/Widgets/HUD5
-MRUItem6=/Game/Blueprints/UI/Widgets/HUD4
-MRUItem7=/Game/Blueprints/UI/Widgets/HUD3
-MRUItem8=/Game/Blueprints/UI/Widgets/HUD2
+MRUItem0=/Game/Blueprints/Pickups/GreenPickup_Actor
+MRUItem1=/Game/Blueprints/Pickups/BluePaintPickup_Actor
+MRUItem2=/Game/Levels/Bubbleopolis
+MRUItem3=/Game/Player/Blueprints/Player_BP
+MRUItem4=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
+MRUItem5=/Game/Player/Player_BP
+MRUItem6=/Game/Animation/Character/Walking_Anim_mixamo_com
+MRUItem7=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem8=/Game/Levels/testYellow
 MRUItem9=/Game/Blueprints/UI/Widgets/HUD1
-MRUItem10=/Game/Blueprints/UI/Widgets/HUD7
-MRUItem11=/Game/Blueprints/UI/Widgets/Pause
-MRUItem12=/Game/Blueprints/UI/HUD4_nowheel
-MRUItem13=/Game/Blueprints/UI/HUD6_nowheel
-MRUItem14=/Game/Blueprints/UI/HUD5_nowheel
-MRUItem15=/Game/Blueprints/UI/Widgets/CrosshairWid
-MRUItem16=/Game/Blueprints/UI/HUD5
-MRUItem17=/Game/Blueprints/UI/HUD
-MRUItem18=/Game/Blueprints/UI/Widgets/HUD
-MRUItem19=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem10=/Game/Blueprints/UI/HUD1_nowheel
+MRUItem11=/Game/Animation/Character/Left_Strafe_Walk_Anim_mixamo_com
+MRUItem12=/Game/Animation/Character/Jumping_Anim_mixamo_com
+MRUItem13=/Game/Animation/Character/Jump
+MRUItem14=/Game/Animation/Character/Left_Strafe_Anim_Take_001
+MRUItem15=/Game/Animation/Character/Run_Backward_Anim_mixamo_com
+MRUItem16=/Game/Animation/Character/Standard_Run_Anim_mixamo_com
+MRUItem17=/Game/Animation/Character/Right_Strafe_Anim_Take_001
+MRUItem18=/Game/Animation/Character/Left_Strafe_Walk_Anim_Take_001
+MRUItem19=/Game/Blueprints/AOE/Splatter/AOE_Blue
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1459,6 +1466,96 @@ HUD1_C.Accessibility=True
 HUD1_C.Clipping=True
 HUD1_C.Navigation=True
 HUD1_C.Localization=True
+AOE_Yellow_C.Tick=True
+AOE_Yellow_C.Default=True
+AOE_Yellow_C.Replication=True
+AOE_Yellow_C.Rendering=True
+AOE_Yellow_C.Collision=True
+AOE_Yellow_C.Actor=True
+AOE_Yellow_C.Input=True
+AOE_Red_C.Tick=True
+AOE_Red_C.Default=True
+AOE_Red_C.Replication=True
+AOE_Red_C.Rendering=True
+AOE_Red_C.Collision=True
+AOE_Red_C.Actor=True
+AOE_Red_C.Input=True
+AOE_Magenta_C.Tick=True
+AOE_Magenta_C.Default=True
+AOE_Magenta_C.Replication=True
+AOE_Magenta_C.Rendering=True
+AOE_Magenta_C.Collision=True
+AOE_Magenta_C.Actor=True
+AOE_Magenta_C.Input=True
+AOE_Green_C.Tick=True
+AOE_Green_C.Default=True
+AOE_Green_C.Replication=True
+AOE_Green_C.Rendering=True
+AOE_Green_C.Collision=True
+AOE_Green_C.Actor=True
+AOE_Green_C.Input=True
+BoxComponent.ComponentTick=True
+AOE_Blue_C.Tick=True
+AOE_Blue_C.Default=True
+AOE_Blue_C.Replication=True
+AOE_Blue_C.Rendering=True
+AOE_Blue_C.Collision=True
+AOE_Blue_C.Actor=True
+AOE_Blue_C.Input=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.CustomAttributes=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.AnimationRig=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.Animation=True
+SkeletalMesh.Sampling=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+Player2_BP_C.Default=True
+Player2_BP_C.RootMotion=True
+Player2_BP_C.Notifies=True
+AnimGraphNode_BlendSpacePlayer.Coordinates=True
+AnimGraphNode_BlendSpacePlayer.Settings=True
+AnimGraphNode_BlendSpacePlayer.Relevancy=True
+Bubbleopolis_C.Tick=True
+Bubbleopolis_C.Replication=True
+Bubbleopolis_C.Actor=True
+Bubbleopolis_C.Input=True
+BluePaintPickup_Actor_C.Tick=True
+BluePaintPickup_Actor_C.Replication=True
+BluePaintPickup_Actor_C.Rendering=True
+BluePaintPickup_Actor_C.Collision=True
+BluePaintPickup_Actor_C.Actor=True
+BluePaintPickup_Actor_C.Input=True
+GreenPickup_Actor_C.Tick=True
+GreenPickup_Actor_C.Replication=True
+GreenPickup_Actor_C.Rendering=True
+GreenPickup_Actor_C.Collision=True
+GreenPickup_Actor_C.Actor=True
+GreenPickup_Actor_C.Input=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -1649,6 +1746,7 @@ None=======
 /Game/Blueprints/UI/HUD4_nowheel.HUD4_nowheel=0
 /Game/Blueprints/UI/Widgets/HUD6.HUD6=0
 /Game/Blueprints/UI/HUD1_nowheel.HUD1_nowheel=1
+/Game/Player/Blueprints/Player2_BP.Player2_BP=0
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1712,7 +1810,7 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=624.000 Y=235.000
-ScreenPosition=X=247.000 Y=22.000
+ScreenPosition=X=183.000 Y=238.000
 WindowSize=X=1305.000 Y=745.000
 WindowSize=X=1360.000 Y=724.000
 None=======
@@ -1733,7 +1831,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../../Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -3142,7 +3240,7 @@ HierarchicalLODOutliner.TimeStamp=2021.02.10-01.01.47
 HierarchicalLODOutliner.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2021.02.10-01.01.40
 BlueprintGraph.LastCompileMethod=External
-SequencerWidgets.TimeStamp=2021.02.02-20.54.59
+SequencerWidgets.TimeStamp=2021.02.09-23.59.32
 SequencerWidgets.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2021.02.02-20.54.29
 ExternalImagePicker.LastCompileMethod=External
@@ -3282,13 +3380,19 @@ GooglePADEditor.TimeStamp=2021.02.10-01.14.20
 GooglePADEditor.LastCompileMethod=External
 TextureEditor.TimeStamp=2021.02.10-01.02.03
 TextureEditor.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2021.02.09-23.59.10
+AnimationEditor.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2021.02.09-23.59.32
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2021.02.09-23.59.31
+PinnedCommandList.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/testYellow
-MRUItem1=/Game/Levels/Splash_screen
-MRUItem2=/Game/Levels/Forest
-MRUItem3=/Game/Levels/TechDemo
-MRUItem4=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/testYellow
+MRUItem2=/Game/Levels/Splash_screen
+MRUItem3=/Game/Levels/Forest
+MRUItem4=/Game/Levels/TechDemo
 MRUItem5=/Game/Levels/MainMenu
 MRUItem6=/Game/Levels/NewWorld
 MRUItem7=/Game/Levels/Green_Paint
@@ -3299,7 +3403,7 @@ MRUItem11=/Game/Levels/Magenta_Test_Room
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LightingResults
+LastLogListing=MapCheck
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -3753,7 +3857,7 @@ bMaterialQualityUsed[3]=0
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
-InstalledPlugins=Substance
+InstalledPlugins=WaypointPatrolSystem
 InstalledPlugins=XRVisualization
 None=======
 
@@ -3870,6 +3974,10 @@ bHideUnrelatedNodes=False
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationBlueprintEditor",Commands=)
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletalMeshEditor",Commands=)
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
